--- a/css/layout.css
+++ b/css/layout.css
@@ -1,285 +1,353 @@
-
-.tabgroup{
-  position:relative;
-  width:500px;
-  height:250px;
-  margin:0 auto;
+/* reset */
+*{
+	margin:0;
+	padding:0;
+	font-size:13px;
+	font-family:"MalgunGothic","맑은 고딕";
+	color:#708287;
+	line-height:1;
+	text-decoration:none;
+	list-style:none;
+	font-style:normal;
+	border:0;
+	vertical-align:middle;
+	box-sizing:border-box;
 }
-/* type1 - h2 + ul구조 */
-.tabmenu{
-
+body{
+	background-color:#e6f4f8;
 }
-.tabmenu h2{
-  display:inline-block;
-  position:relative;
-  float:left;
-  margin-right:-1px;
+/* layout - header */
+.header{
+	position:relative;
+	width:960px;
+	height:145px;
+	margin:0 auto;
 }
-.tabmenu h2 a{
-  display:inline-block;
-  min-width:100px;
-  height:40px;
-  padding:10px 10px;
-  border:1px solid #dadada;
-  background-color:#f4f4f4;
-  text-align:center;
+.header .logo{	
+	width:94px;
+	height:29px;
+	padding-top:64px;
+	padding-left:10px;
 }
-.tabmenu ul{
-  display:block;
-  position:absolute;
-  top:39px;
-  left:0;
-  width:100%;
-  padding:15px 10px;
-  border-top:1px solid #dadada;
-}
-.tabmenu li{
-  position:relative;
-  padding-left:10px;
-  border-bottom:1px dotted #dadada;
-  /* background:url() no-repeat 0 50%; */
-}
-.tabmenu li::before{
-  content:"";
-  display:inline-block;
-  position:absolute;
-  top:50%;
-  left:0;
-  width:4px;
-  height:4px;
-  background-color:#dadada;
-  transform:translateY(-50%);
-  -webkit-transform:translateY(-50%);
-  -moz-transform:translateY(-50%);
-  -ms-transform:translateY(-50%);
-  -o-transform:translateY(-50%);
-  border-radius:3px;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  -ms-border-radius:3px;
-  -o-border-radius:3px;
-}
-.tabmenu li a{
-  overflow:hidden;
-  display:inline-block;
-  max-width:calc(100% - 100px);/* 말줄임표 */
-  padding:8px 0;
-  text-overflow:ellipsis;/* 말줄임표 */
-  white-space:nowrap;/* 한줄로 만듦 */
-}
-
-/* 컨텐츠 길이에 따라 정 가운데 위치시키는 제일 좋은 방법
-position:absolute;
-top:50%;
-left:50%;
-min-width:500px;
-transform:translate(-50%, -50%);
-  -webkit-transform:translate(-50%, -50%);
-  -moz-transform:translate(-50%, -50%);
-  -o-transform:translate(-50%, -50%);
-  -ms-transform:translate(-50%, -50%); 
- */
-
-.tabmenu li .date{
-  position:absolute;
-  top:50%;
-  right:0;
-  transform:translateY(-50%);
-  -webkit-transform:translateY(-50%);
-  -moz-transform:translateY(-50%);
-  -o-transform:translateY(-50%);
-  -ms-transform:translateY(-50%);
-  /*transform:translateY(-50%);
-  -webkit-transform:translateY(-50%);
-  -moz-transform:translateY(-50%);
-  -o-transform:translateY(-50%);
-  -ms-transform:translateY(-50%);
-  하위 브라우저 위해 작성 필요 //확장팩prefix*/
-}
-.tabmenu .more{
-  position:absolute;
-  top:10px;
-  right:5px;
-  display:inline-block;
-}
-
-/* 활성화 메뉴 - on */
-.tabmenu.on h2{
-  z-index:1;
+.header .logo a{	
 
 }
-.tabmenu.on h2 a{
-  border-color:#222;
-  border-bottom-color:transparent;
-  background-color:#fff;
-  font-weight:bold;
+.header .logo img{	
+	width:94px;
+	height:auto;
 }
-.tabmenu.on ul{
-  display:none;
-  position:absolute;
-  top:39px;
-  left:0;
-  width:100%;
-  padding:15px 10px;
-  border-top:1px solid #dadada;
+/* navigation */
+.nav{
+	position:absolute;
+	top:78px;
+	right:0;
+}
+.nav a{
+	display:inline-block;
+	float:left;
+	margin:0 10px;
+	color:#2f323a;
+	font-size:16px;
+	font-weight:bold;
+}
+/* layout - container */
+.container{
+	width:960px;
+	margin:0 auto;
+}
+.container::after{
+	content:"";
+	display:block;
+	clear:both;
+}
+.container img{
+	width:100%;
+	height:100%;
+}
+.portfolio{
+	position:relative;
+	width:100%;
+	height:300px;
+	margin-bottom:10px;
+	background-color:#000;
+}
+.portfolio .txt{
+	position:absolute;
+	top:0;
+	left:0;
+	bottom:0;
+	right:0;
+	width:100%;
+	height:72px;
+	margin:auto;
+	text-align:center;
+	/* transform:translateY(-50%);
+	-webkit-transform:translateY(-50%);
+	-moz-transform:translateY(-50%);
+	-ms-transform:translateY(-50%);
+	-o-transform:translateY(-50%); */
+}
+.portfolio .txt em{
+	display:inline-block;
+	width:100%;
+	margin-bottom:20px;
+	color:#fff;
+	font-size:16px;
+}
+.portfolio .txt strong{
+	display:inline-block;
+	width:100%;
+	color:#fff;
+	font-size:36px;
+}
+.portfolio .more{
+	display:block;
+	position:absolute;
+	bottom:40px;
+	left:50%;
+	width:120px;
+	height:40px;
+	padding:10px;
+	border:1px solid #717172;
+	border-radius:40px;
+	text-align:center;
+	/* line-height:36px; */
+	font-size:14px;
+	color:#fff;
+	transform:translateX(-50%);
+	-webkit-transform:translateX(-50%);
+	-moz-transform:translateX(-50%);
+	-ms-transform:translateX(-50%);
+	-o-transform:translateX(-50%);
+	-webkit-border-radius:40px;
+	-moz-border-radius:40px;
+	-ms-border-radius:40px;
+	-o-border-radius:40px;
+}
+.html5{
+	position:relative;
+	float:left;
+	width:49.5%;
+	height:475px;
+	margin-bottom:1%;
+	background-color:#b9a88a;
+}
+.css3{
+	position:relative;
+	float:right;
+	width:49.5%;
+	height:475px;
+	margin-bottom:1%;
+	background-color:#2d2d35;
+}
+.html5 .txt,
+.css3 .txt{
+	position:absolute;
+	top:50%;
+	left:0;
+	width:100%;
+	text-align:center;
+	transform:translateY(-50%);
+	-webkit-transform:translateY(-50%);
+	-moz-transform:translateY(-50%);
+	-ms-transform:translateY(-50%);
+	-o-transform:translateY(-50%);
+}
+.html5 .more,
+.css3 .more{
+	display:inline-block;
+	width:120px;
+	height:40px;
+	padding:10px;
+	color:#fff;
+	border:1px solid rgba(255,255,255,.7);
+	border-radius:40px;
+	text-align:center;
+	font-size:14px;
+}
+.html5 em,
+.css3 em{
+	display:inline-block;
+	width:100%;
+	color:#fff;
+	font-size:36px;
+}
+.html5 strong,
+.css3 strong{
+	display:inline-block;
+	width:100%;
+	margin:25px 0;
+	color:#fff;
+	font-size:18px;
+	font-family:"Myliad Pro";
+}
+.less{
+	clear:both;
+	float:left;
+	width:232.5px;
+	height:232.5px;
+	margin-right:10px;
+	background-color:yellow;
+}
+.js{
+	float:left;
+	width:232.5px;
+	height:232.5px;
+	margin-right:10px;
+	background-color:skyblue;
+}
+.svn{
+	float:left;
+	width:232.5px;
+	height:232.5px;
+	margin-right:10px;
+	background-color:darkcyan;
+}
+.git{
+	float:left;
+	width:232.5px;
+	height:232.5px;
+	background-color:darkorange;
+}
+/* layout - footer */
+.footer{
+	position:relative;
+	width:100%;
+	margin:50px 0 auto;
+	background-color:#dbecf1;
+}
+.footerwrap{
+	position:relative;
+	width:960px;
+	height:100px;
+	margin:0 auto;
+}
+.footer .copy{
+	padding-top:60px;
+}
+.footer .copy span{
+	float:left;
+	color:#708287;
+	font-size:14px;
+}
+.footer .copy span:last-child{
+	float:right;
+}
+.footer .copy b{
+	color:#2f323a;
+	font-weight:normal;
+}
+.footer .sns{
+	position:absolute;
+	top:30px;
+	right:0;
+}
+.footer .sns a{
+	display:inline-block;
+	float:left;
+	margin-left:25px;
+}
+.footer .sns a:first-child{
+	margin-left:0;
 }
 
-/* 한 줄 말줄임 처리
-overflow:hidden;
-display:inline-block;
-max-width:100%;
-text-overflow:ellipsis; //...말줄임 역할
-white-space:nowrap; // 텍스트를 한 줄로 처리하는 역할
-*/
-
-/* type2  */
-.tab{
-
+/* media query * 컨버터 사이트 참조/
+/* 디바이스부터 잡았다면 작은 수치부터/웹부터했다면 큰수치(max)부터 */
+@media(max-width:959px){
+	body{
+		padding:0 15px;
+	}
+	.header{
+		width:100%;
+		padding-top:60px;
+	}
+	.header .logo{
+		margin:0 auto 20px;
+		padding-top:0px;
+		padding-left:0;
+	}
+	/* navigation */
+	.nav{
+		position:static;
+		width:100%;
+		text-align:center;
+	}
+	.nav a{
+		float:none;
+	}
+	.container{
+		width:100%;
+	}
+	.potfolio{
+		height:376px;
+	}
+	.html5{
+		height:372px;
+	}
+	.css3{
+		height:372px;
+	}
+	.less{
+		float:left;
+		width:49.5%;
+		height:372px;
+		margin-right:0;
+		margin-bottom:1%;
+	}
+	.js{
+		float:right;
+		width:49.5%;
+		height:372px;
+		margin-right:0;
+		margin-bottom:1%;
+	}
+	.svn{
+		clear:both;
+		float:left;
+		width:49.5%;
+		height:372px;
+		margin-right:0;
+	}
+	.git{
+		float:right;
+		width:49.5%;
+		height:372px;
+	}
+	.footer{
+		width:100%;
+		margin:0px;
+	}
+	.footerwrap{
+		width:100%;
+		height:125px;
+		text-align:center;
+	}
+	.footer .copy span{
+		float:none;
+		display:inline-block;
+		width:100%;
+		margin-bottom:10px;
+	}
+	.footer .copy span:last-child{
+		float:none;
+	}
+	.footer .sns{
+		display:inline-block;
+		/*position:static; 포지션해체*/
+		left:50%;
+		right:auto;
+		transform:translateX(-50%);
+		-webkit-transform:translateX(-50%);
+		-moz-transform:translateX(-50%);
+		-ms-transform:translateX(-50%);
+		-o-transform:translateX(-50%);
 }
-.tab .tabtit{
-  display:inline-block;
-  position:relative;
-  float:left;
-  margin-right:-1px;
-}
-.tab .tabtit a{
-  display:inline-block;
-  min-width:100px;
-  height:40px;
-  padding:10px 10px;
-  border:1px solid #dadada;
-  background-color:#f4f4f4;
-  text-align:center;
-}
-.tab .tabcnt{
-  display:none;
-  position:absolute;/* absolute에는 width값 줘야함 */
-  width:100%;
-  top:39px;
-  left:0;
-}
-.tab .tabcnt ul{
-  width:100%;
-  padding:15px 10px;
-  border-top:1px solid #dadada;
-}
-.tab .tabcnt li{
-  position:relative;
-  padding-left:10px;
-  border-bottom:1px dotted #dadada;
-}
-.tab .tabcnt li::before{
-  content:"";
-  display:inline-block;
-  position:absolute;
-  top:50%;
-  left:0;
-  width:4px;
-  height:4px;
-  background-color:#dadada;
-  transform:translateY(-50%);
-  -webkit-transform:translateY(-50%);
-  -moz-transform:translateY(-50%);
-  -ms-transform:translateY(-50%);
-  -o-transform:translateY(-50%);
-  border-radius:3px;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  -ms-border-radius:3px;
-  -o-border-radius:3px;
-}
-
-.tab .tabcnt li a{
-  overflow:hidden;
-  display:inline-block;
-  max-width:calc(100% - 100px);/* 말줄임표 */
-  padding:8px 0;
-  text-overflow:ellipsis;/* 말줄임표 */
-  white-space:nowrap;/* 한줄로 만듦 */
-}
-.tab .tabcnt li .date{
-  position:absolute;
-  top:50%;
-  right:0;
-  transform:translateY(-50%);
-  -webkit-transform:translateY(-50%);
-  -moz-transform:translateY(-50%);
-  -o-transform:translateY(-50%);
-  -ms-transform:translateY(-50%);
-}
-.tab .tabcnt .more{
-  position:absolute;
-  top:-20px;
-  right:5px;
-  display:inline-block;
-}
-
-/* 활성화 메뉴 - on */
-.tab .tabtit.on{
-  z-index:1;
-}
-.tab .tabtit.on a{
-  border-color:#222;
-  border-bottom-color:transparent;
-  background-color:#fff;
-  font-weight:bold;
-}
-.tab .tabcnt.on{
- display:block;
-}
-
-/* 서브 콘텐츠 탭메뉴 구조 */
-
-.cbody{
-  width:700px;
-  margin:0 auto;
-}
-.tapmenu{
-  width:100%;
-  height:40px;
-  border-bottom:1px solid #dadada;
-}
-.tapmenu::after{
-  content:"";
-  display:block;
-  clear:both;
-}
-.tapmenu li{
-  display:inline-block;
-  position:relative;
-  float:left;
-  margin-right:-1;
-}
-.tapmenu li a{
-  display:inline-block;
-  min-width:100px;
-  height:40px;
-  padding:10px;
-  border:1px solid #dadada;
-  border-bottom-color:#222;
-  background-color:#f4f4f4;
-  text-align:center;
-}
-.tapcnt{
-  display:none;
-  position:relative;
-
-  min-height:500px;
-  padding:15px 10px;
-  border:1px solid #dadada;
-  border-top:0;
-}
-
-/* 활성화 메뉴 - on */
-.tabmenu li.on{
-  z-index:1;
-}
-.tabmenu li.on a{
-  border-color:#222;
-  border-bottom-color:transparent;
-  background-color:#fff;
-  font-weight:bold;
-}
-.tapcnt.on{
-  display:block;
+	.footer .sns a{
+		display:inline-block;
+		float:none;
+		margin:0 22px;
+	}
+	.footer .sns a:last-child{
+		margin-right:0;
+	}
 }
